Don't look for the primary frame unless we have to on broken images.  Bug 239262, r+sr=dbaron, a=chofmann